# solarinvestigatoradk

./: .env.docker.example  .env.prod.example  .gitignore  AGENT_STATS_ENHANCEMENT.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCTION.md  README.md  SSE_ARCHITECTURE.md  SSE_IMPLEMENTATION_COMPLETE.md  STREAMING_GUIDE.md  TASK2_SCOPE.md  TASK3_ADK_STATE.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  minimal_task_list.md  package-lock.json  tasks.md  test.http
.github/: copilot-instructions.md
backend/: .env.example  Dockerfile  Dockerfile.prod  README.md  investigations_data.json  pyproject.toml  solar_investigation_data.db  test_implementation.py  test_investigation_flow.py  test_real_investigation.py  test_sse_stream.py  test_sse_stream_new.py  test_sse_ui.html  test_streaming.py  test_ui_summarizer.py
backend/src/: main.py
backend/src/adk/: __init__.py
backend/src/adk/agents/: __init__.py  solar_investigation_agent.py  ui_summarizer_agent.py  workorder_agent.py
backend/src/adk/callbacks/: __init__.py  summarizer.py
backend/src/adk/config/: __init__.py  settings.py
backend/src/adk/controllers/: __init__.py  investigation_controller.py  investigation_management_controller.py  investigation_management_controller_simplified.py  plant_controller.py  websocket_controller.py  workorder_controller.py
backend/src/adk/models/: __init__.py  investigation.py  plant.py  workorder.py
backend/src/adk/problem_finder/: agent.py  prompts.py  toolbox.py
backend/src/adk/problem_finder/sub_agents/: __init__.py
backend/src/adk/problem_finder/sub_agents/aggregator_agent/: agent.py  prompt.py
backend/src/adk/problem_finder/sub_agents/alarm_research_agent/: agent.py  prompts.py  tools.py
backend/src/adk/problem_finder/sub_agents/alarm_research_agent/sub_agents/alarm_db_agent/: agent.py
backend/src/adk/problem_finder/sub_agents/alarm_structurer_agent/: agent.py  prompts.py
backend/src/adk/problem_finder/sub_agents/daily_pr_agent/: agent.py  prompts.py
backend/src/adk/problem_finder/sub_agents/detailed_inverter_performance_agent/: agent.py  prompts.py  tools.py
backend/src/adk/problem_finder/sub_agents/detailed_plant_timeseries_agent/: agent.py  prompts.py  tools.py
backend/src/adk/services/: __init__.py  adk_services.py  broadcast_service.py  investigation_service.py  investigation_service_clean.py  investigation_service_simplified.py  plant_service.py  workorder_service.py
backend/src/adk/tools/: __init__.py
backend/src/agent/: app.py  configuration.py  controllers.py  mock_data.py  models.py
backend/tests/: conftest.py  test_api.py
frontend/: .pnp.cjs  Dockerfile  Dockerfile.prod  angular.json  docker-entrypoint.sh  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.html  styles.css
frontend/src/app/: app.config.ts  app.routes.ts
frontend/src/app/models/: investigation.ts  plant.ts
frontend/src/app/services/: investigation.service.ts  plant.service.ts
frontend/src/assets/: env.js
frontend/src/components/: ActivityTimeline.tsx  ChatMessagesView.tsx  Dashboard.tsx  InputForm.tsx  InvestigationDialog.tsx  InvestigationInterface.tsx  WelcomeScreen.tsx
frontend/src/environments/: environment.prod.ts  environment.ts
frontend/src/hooks/: useDashboardData.ts
frontend/src/lib/: api.ts
nginx/: nginx.conf
problem_finder/: agent.py  prompts.py
problem_finder/sub_agents/: __init__.py
problem_finder/sub_agents/aggregator_agent/: agent.py
problem_finder/sub_agents/alarm_research_agent/: agent.py  tools.py
problem_finder/sub_agents/alarm_research_agent/sub_agents/: __init__.py
problem_finder/sub_agents/code_agent/: agent.py  prompts.py  tools.py
problem_finder/sub_agents/daily_pr_agent/: agent.py  prompts.py
problem_finder/sub_agents/detailed_inverter_performance_agent/: agent.py  prompts.py
problem_finder/sub_agents/detailed_plant_timeseries_agent/: agent.py
(+8 files in other folders)
